deploy/azure-wi/k8s/00-namespace-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: langfuse
